add new templates

--- a/society_main/templates/society_main/components/footer.html
+++ b/society_main/templates/society_main/components/footer.html
@@ -1,14 +1,15 @@
-<footer class="p-3 mt-3 border-top bg-secondary bg-light bg-lighter">
-  <div class="container">
-    <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-
-      <div class="col-12 col-lg-auto mb-2 mb-lg-0 text-right">
-        <p><b>С Оптимизмом по жизни!</b></p>
-          <p>
-          Телефон: +7 928 221-81-39<br>
-          Email: info@site.com
-        </p>
+  <footer class="bg-light py-3 mt-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6 text-center text-md-start">
+          <p>Сообщество неунывающих людей Оптимист.</p>
         </div>
+        <div class="col-md-6 text-center text-md-end">
+          <p>Адрес: <br>
+            Телефон: <br>
+            E-mail:
+          </p>
+        </div>
+      </div>
     </div>
-  </div>
-</footer>
+  </footer>
