--- a/society_main/templates/society_main/base.html
+++ b/society_main/templates/society_main/base.html
@@ -1,15 +1,19 @@
+{% load static %}
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link type="text/css" href="{% static 'society_main/css/bootstrap.css' %}" rel="stylesheet"/>
+  <link type="text/css" href="{% static 'society_main/css/style.css' %}" rel="stylesheet"/>
 
   <title>{{ title }}</title>
 </head>
 
 <body>
+
 {% include "society_main/components/header.html" %}
 {% block content %}
 
@@ -18,5 +22,8 @@
 
 {% endblock %}
 {% include "society_main/components/footer.html" %}
+
+<script src="{% static 'society_main/js/bootstrap.js' %}"></script>
+
 </body>
 </html>
