--- a/society_main/templates/society_main/components/header.html
+++ b/society_main/templates/society_main/components/header.html
@@ -1,19 +1,34 @@
 
-<header class="p-3 mb-3 border-bottom bg-light">
-    <div class="container">
-      <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-light ">
+      <div class="container">
 
-        {% include "society_main/components/menu.html" %}
+        <a class="navbar-brand" href="#">
+          <img src="logo.png" alt="Оптимист">
+        </a>
 
-<!--        <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">-->
-<!--          <input type="search" class="form-control" placeholder="Напишите нам..." aria-label="Search">-->
-<!--        </form>-->
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-        <div class="text-end">
-          <button type="button" class="btn btn-outline-primary me-2">Вход</button>
-          <button type="button" class="btn btn-primary">Регистрация</button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'index' %}">Главная</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'about' %}">О нас</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'news' %}">Статьи</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'contacts' %}">Контакты</a>
+            </li>
+          </ul>
         </div>
 
       </div>
-    </div>
+    </nav>
   </header>
