--- a/society_main/static/society_main/css/style.css
+++ b/society_main/static/society_main/css/style.css
@@ -185,3 +185,22 @@ div.article-panel p.last {
     margin: 0;
     float: right;
 }
+
+ul.tags-list {
+    width: 100%;
+	margin: 0;
+	padding: 0;
+	list-style: none;
+}
+
+ul.tags-list li {
+	margin: 0;
+	padding: 0 0 10px;
+    display: inline-block;
+}
+
+ul.tags-list li a {
+	padding: 5px;
+	font-size: 16px;
+	border: 1px solid #aaa;
+}
