--- a/society_main/templates/society_main/components/sidebar.html
+++ b/society_main/templates/society_main/components/sidebar.html
@@ -1,5 +1,6 @@
 {% load society_main_tags %}
 
+
 <div class="main-container d-flex">
         <div class="sidebar" id="side_nav">
             <div class="header-box px-2 pt-3 pb-4 d-flex justify-content-between">
@@ -12,16 +13,8 @@
             {% show_categories cat_selected %}
 
             <hr class="text-white">
+            {% show_all_tags %}
 
-            <ul class="list-unstyled px-2">
-                <li class=""><a href="#" class="text-decoration-none px-3 py-2 d-block">
-                        Тэги:</a></li>
-                <li class=""><a href="#" class="text-decoration-none px-3 py-2 d-block"><i class="fa-solid fa-tree"></i>
-                        Отдых </a></li>
-                <li class=""><a href="#" class="text-decoration-none px-3 py-2 d-block"><i class="fa-solid fa-circle-exclamation"></i>
-                        Важно </a></li>
-
-            </ul>
 
         </div>
         <div class="content">
