--- a/society_main/templates/society_main/news.html
+++ b/society_main/templates/society_main/news.html
@@ -27,8 +27,8 @@
                     {% autoescape off %}
                     {{p.content|linebreaks|truncatewords:50}}
                     {% endautoescape %}
-                    <div class="clear"></div>
-                    <p class="link-read-post"><a href="{{ p.get_absolute_url }}">Читать</a></p>
+                    <div class="d-flex"></div>
+                    <p class="btn btn-primary ms-auto" onclick="location.href='{{ p.get_absolute_url }}'">Читать</p>
                     </li>
                 {% endif %}
             {% endfor %}
