--- a/society_main/static/society_main/css/style.css
+++ b/society_main/static/society_main/css/style.css
@@ -52,8 +52,31 @@ header {
   color: #fff;
 }
 
+
 .nav-link.selected {
   color: #fff;
+}
+
+.nav-item.active {
+  border-radius: 30px;
+  box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+  background: linear-gradient(#fff, #fff 50%, transparent 50%, transparent);
+  background-size: 300% 300%;
+  font-variant: small-caps;
+  font-size: 19px;
+  font-weight: bold;
+  word-spacing: 1px;
+
+
+}
+
+.nav-item.active:hover {
+  color: #000000;
+}
+
+@keyframes gradient {
+  0% {background-position: 0% 0%}
+  100% {background-position: 100% 100%}
 }
 
 /* Стили для анимации текста */
@@ -169,6 +192,36 @@ ul.list-articles {
 ul.list-articles li {
 	border-bottom: 1px solid #ccc;
 }
+
+.chechbox_in {
+
+
+    width: 20px;
+    height: 20px;
+    border: 2px solid #3c7e5e;
+
+
+}
+
+.chechbox_p {
+    font-size: 11px;
+    margin-left: 10px;
+    margin-top: 20px;
+
+
+}
+
+
+ .custom-checkbox {
+    display: flex;
+    margin-left: 130px;
+    align-items: center;
+    margin-bottom: 10px;
+    font-size: 16px;
+
+
+}
+
 
 div.article-panel {
     background: #eee;
