--- a/society_main/templates/society_main/components/header.html
+++ b/society_main/templates/society_main/components/header.html
@@ -14,16 +14,16 @@
 
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
-            <li class="nav-item">
+            <li class="nav-item {% if active_page == 'index' %}active{% endif %} gradient">
               <a class="nav-link" href="{% url 'index' %}">Главная</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item {% if active_page == 'about' %}active{% endif %} gradient">
               <a class="nav-link" href="{% url 'about' %}">О нас</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item {% if active_page == 'news' %}active{% endif %} gradient">
               <a class="nav-link" href="{% url 'news' %}">Статьи</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item {% if active_page == 'contacts' %}active{% endif %} gradient">
               <a class="nav-link" href="{% url 'contacts' %}">Контакты</a>
             </li>
           </ul>
