--- a/society_main/templates/society_main/contacts.html
+++ b/society_main/templates/society_main/contacts.html
@@ -26,35 +26,23 @@
 </div>
 
       <div class="col-md-6">
-
         <h3 class="mt-4">Напишите нам:</h3>
         <br>
 
-<form action="" method="POST">
+<form action="" method="POST" id="contactForm">
 
   {% csrf_token %}
   <div class="form-error">{{ form.non_field_errors }}</div>
 
+  {% for f in form %}
   <div class="mb-3 form-group">
-
-    <input type="text" id="name-input" class="form-control form-style" name="{{ form.name.name }}" value="{{ form.name.value|default_if_none:'' }}" required>
-    <label for="name-input" id="name-label" class="form-label">Ваше имя</label>
+<label class="form-label" for="{{ f.id_for_label }}">{{f.label}}: </label>
+    {{ f }}
   </div>
-  <div class="form-error">{{ form.name.errors }}</div>
-
+  <div class="form-error">{{ f.errors }}</div>
   <br>
-  <div class="mb-3 form-group">
-    <input type="email" id="email-input"  class="form-control form-style " name="{{ form.email.name }}" value="{{ form.email.value|default_if_none:''  }}" required>
-    <label for="email-input" id="email-label" class="form-label">Email</label>
-    <div class="form-error">{{ form.email.errors }}</div>
-  </div>
+    {% endfor %}
 
-  <br>
-  <div class="mb-3 form-group">
-    <textarea id="message-input" class="form-control form-style" name="{{ form.message.name }}">{{ form.message.value|default_if_none:'' }}</textarea>
-    <label for="message-input" id="message-label" class="form-label">Сообщение</label>
-  </div>
-  <div class="form-error">{{ form.message.errors }}</div>
   <div class="mb-3  form-group">
     <label for="accept_tos" class="custom-checkbox">
       <input type="checkbox" class="chechbox_in" id="accept_tos" required>
@@ -62,31 +50,35 @@
     </label>
   </div>
 
-  <button type="submit" class="btn btn-primary mt-4">Отправить</button>
+  <button type="submit" class="btn btn-primary mt-2">Отправить</button>
 </form>
-
-
       </div>
-
     </div>
-
   </div>
-
 </main>
 
 
 
 <script>
-  ["name", "email", "message"].forEach(function (field) {
-    document.getElementById(`${field}-input`).addEventListener("input", function (event) {
-      const label = document.getElementById(`${field}-label`);
-      if (event.target.value !== "") {
-        label.classList.add("label-up");
-      } else {
-        label.classList.remove("label-up");
-      }
-    });
+document.addEventListener("DOMContentLoaded", function() {
+
+  const form = document.getElementById("contactForm");
+
+  form.addEventListener("input", function(event) {
+
+    const field = event.target;
+
+    const label = form.querySelector(`label[for="${field.id}"]`);
+
+    if(field.value !== '') {
+      label.classList.add('label-up');
+    } else {
+      label.classList.remove('label-up');
+    }
+
   });
+
+});
 </script>
 
 {% endblock %}
