--- a/society_main/templates/society_main/components/footer.html
+++ b/society_main/templates/society_main/components/footer.html
@@ -1,14 +1,28 @@
   <footer class="bg-light py-3 mt-5">
     <div class="container">
       <div class="row">
-        <div class="col-md-6 text-center text-md-start">
+        <div class="col-md-8 text-center text-md-start">
           <p class="fw-bold">Мы верим в то, что каждый человек прежде всего личность</p>
         </div>
-        <div class="col-md-6 text-center text-md-end">
-          <p class="fw-bold">Адрес: <br>
-            Телефон: <br>
-            E-mail:
+        <div class="col-md-4 text-center text-md-start">
+          <p class="fw-bold ms-auto">
+            Адрес: Краснодарский край, Новороссийск <br>
+            Телефон: +7 (495) 123-45-67 <br>
+            E-mail: optimistnovoross2018@gmail.com <br>
+            Соц.Сети:
+            <span class="social-icons">
+              <a href="https://t.me/django_selfedu" target="_blank">
+                <i class="fa-brands fa-telegram"></i>
+              </a>
+              <a href="https://vk.com/id662546453" target="_blank">
+                <i class="fa-brands fa-vk"></i>
+              </a>
+              <a href="#" target="_blank">
+               <i class="fa-brands fa-whatsapp"></i>
+              </a>
+            </span>
           </p>
+
         </div>
       </div>
     </div>
