--- a/society_main/templates/society_main/contacts.html
+++ b/society_main/templates/society_main/contacts.html
@@ -21,7 +21,7 @@
   <h4 class="mt-4"><span class="fw-bold">Директор:</span></h4>
   <p class="ms-4 fs-5 fw-bold">Авдеев Валентин</p>
   <p class="ms-4"><span class="fw-bold">Телефон:</span> +7 (495) 123-45-67</p>
-  <p class="ms-4"><span class="fw-bold">Email:</span> info@company.com</p>
+  <p class="ms-4"><span class="fw-bold">Email:</span> optimistnovoross2018@gmail.com</p>
 
 </div>
 
