change button  position to right in news.html, add icon on buttons

--- a/society_main/templates/society_main/contacts.html
+++ b/society_main/templates/society_main/contacts.html
@@ -50,7 +50,8 @@
     </label>
   </div>
 
-  <button type="submit" class="btn btn-primary mt-2">Отправить</button>
+  <button type="submit" class="btn btn-primary mt-2">
+    <i class="fa-sharp fa-solid fa-paper-plane"></i>  Отправить</button>
 </form>
       </div>
     </div>
