--- a/society_main/templates/society_main/components/footer.html
+++ b/society_main/templates/society_main/components/footer.html
@@ -12,14 +12,11 @@
             Соц.Сети:
             <span class="social-icons">
               <a href="https://t.me/django_selfedu" target="_blank">
-                <i class="fa-brands fa-telegram"></i>
-              </a>
+                <i class="fa-brands fa-telegram"></i></a>
               <a href="https://vk.com/id662546453" target="_blank">
-                <i class="fa-brands fa-vk"></i>
-              </a>
+                <i class="fa-brands fa-vk"></i></a>
               <a href="#" target="_blank">
-               <i class="fa-brands fa-whatsapp"></i>
-              </a>
+                <i class="fa-brands fa-whatsapp"></i></a>
             </span>
           </p>
 
