--- a/society_main/static/society_main/css/style.css
+++ b/society_main/static/society_main/css/style.css
@@ -197,13 +197,13 @@ ul.list-articles li {
 
     width: 20px;
     height: 20px;
-    border: 2px solid #3c7e5e;
+    border: 3px solid #3c7e5e;
 
 
 }
 
 .chechbox_p {
-    font-size: 11px;
+    font-size: 9px;
     margin-left: 10px;
     margin-top: 20px;
 
@@ -215,8 +215,8 @@ ul.list-articles li {
     display: flex;
     margin-left: 130px;
     align-items: center;
-    margin-bottom: 10px;
-    font-size: 16px;
+    margin-top: 8px;
+    font-size: 11px;
 
 
 }
