--- a/society_main/static/society_main/css/style.css
+++ b/society_main/static/society_main/css/style.css
@@ -128,9 +128,9 @@ footer {
 }
 
 .carousel-item img {
+  max-width: 100%;
   object-fit: cover;
   object-position: center;
-  width: 100%;
   height: 100%;
 }
 
@@ -276,4 +276,25 @@ ul.tags-list li a {
 
 .social-icons a:hover img {
   transform: scale(1.2);
+}
+
+.purpose-table, .purpose-table th, .purpose-table td {
+  border: 1px solid #d8d8d8;
+  font-size: inherit;
+  line-height: inherit;
+}
+
+.no-underline {
+  text-decoration: none;
+  color: inherit;
+}
+
+
+.list-group-item-action:hover {
+    opacity: 75%;
+}
+
+
+h5 {
+    font-weight: bold
 }
