change views.py add DetailView, ListView, TemplateView

--- a/society_main/static/society_main/css/style.css
+++ b/society_main/static/society_main/css/style.css
@@ -238,6 +238,16 @@ div.article-panel p.last {
     float: right;
 }
 
+img.img-article-left.thumb {
+	max-width: 150px;
+	height: auto;
+}
+
+.article-img {
+  max-width: auto;
+  height: 750px;
+}
+
 ul.tags-list {
     width: 100%;
 	margin: 0;
