--- a/society_main/templates/society_main/components/footer.html
+++ b/society_main/templates/society_main/components/footer.html
@@ -7,7 +7,7 @@
         <div class="col-md-4 text-center text-md-start">
           <p class="fw-bold ms-auto">
             Адрес: Краснодарский край, Новороссийск <br>
-            Телефон: +7 (495) 123-45-67 <br>
+            Телефон: +7 (928) 881-15-09 <br>
             E-mail: optimistnovoross2018@gmail.com <br>
             Соц.Сети:
             <span class="social-icons">
@@ -15,7 +15,9 @@
                 <i class="fa-brands fa-telegram"></i></a>
               <a href="https://vk.com/id662546453" target="_blank">
                 <i class="fa-brands fa-vk"></i></a>
-              <a href="#" target="_blank">
+              <a href="https://ok.ru/profile/598093818404" target="_blank">
+                <i class="fa-brands fa-square-odnoklassniki"></i></a>
+              <a href="https://api.whatsapp.com/send?phone=79288811509" target="_blank">
                 <i class="fa-brands fa-whatsapp"></i></a>
             </span>
           </p>
