--- a/society_main/templates/society_main/contacts.html
+++ b/society_main/templates/society_main/contacts.html
@@ -18,9 +18,9 @@
   <h3 class="mt-4"><span class="fw-bold">Адрес:</span></h3>
   <p class="ms-4">г. Новороссийск, ул. Ленина, д. 5, офис 123</p>
 
-  <h4 class="mt-4"><span class="fw-bold">Директор:</span></h4>
-  <p class="ms-4 fs-5 fw-bold">Авдеев Валентин</p>
-  <p class="ms-4"><span class="fw-bold">Телефон:</span> +7 (495) 123-45-67</p>
+  <h4 class="mt-4"><span class="fw-bold">Председатель НГО:</span></h4>
+  <p class="ms-4 fs-5 fw-bold">Гаврилов Валерий Андреевич</p>
+  <p class="ms-4"><span class="fw-bold">Телефон:</span> +7 (928) 881-15-09</p>
   <p class="ms-4"><span class="fw-bold">Email:</span> optimistnovoross2018@gmail.com</p>
 
 </div>
