--- a/society_main/templates/society_main/1.html
+++ b/society_main/templates/society_main/1.html
@@ -1,86 +1,25 @@
-{% extends "society_main/base.html" %}
+{% extends 'society_main/base.html' %}
 
+{% block breadcrumbs %}
+<!-- Теги -->
+{% with post.tags.all as tags %}
+{% if tags %}
+<ul class="tags-list">
+    <li>Теги:</li>
+    {% for t in tags %}
+    <li><a href="{{t.get_absolute_url}}">{{t.tag}}</a></li>
+    {% endfor %}
+</ul>
+{% endif %}
+{% endwith %}
+{% endblock %}
 
 {% block content %}
+<h1>{{post.title}}</h1>
 
+{% if post.photo %}
+<p ><img class="img-article-left" src="{{post.photo.url}}"></p>
+{% endif %}
 
-
-<main>
-
-  <div class="container pt-4 pb-4">
-
-    <h1 class="text-center">Контакты</h1>
-
-    <div class="row">
-
-<div class="col-md-6">
-
-  <h3 class="mt-4"><span class="fw-bold">Адрес:</span></h3>
-  <p class="ms-4">г. Новороссийск, ул. Ленина, д. 5, офис 123</p>
-
-  <h4 class="mt-4"><span class="fw-bold">Директор:</span></h4>
-  <p class="ms-4 fs-5 fw-bold">Авдеев Валентин</p>
-  <p class="ms-4"><span class="fw-bold">Телефон:</span> +7 (495) 123-45-67</p>
-  <p class="ms-4"><span class="fw-bold">Email:</span> optimistnovoross2018@gmail.com</p>
-
-</div>
-
-      <div class="col-md-6">
-        <h3 class="mt-4">Напишите нам:</h3>
-        <br>
-
-<form action="" method="POST" id="contactForm">
-
-  {% csrf_token %}
-  <div class="form-error">{{ form.non_field_errors }}</div>
-
-  {% for f in form %}
-  <div class="mb-3 form-group">
-<label class="form-label" for="{{ f.id_for_label }}">{{f.label}}: </label>
-    {{ f }}
-  </div>
-  <div class="form-error">{{ f.errors }}</div>
-  <br>
-    {% endfor %}
-
-  <div class="mb-3  form-group">
-    <label for="accept_tos" class="custom-checkbox">
-      <input type="checkbox" class="chechbox_in" id="accept_tos" required>
-      <p class="chechbox_p"> Я даю своё согласие на обработку персональных данных в соответствии с политикой в отношении обработки персональных данных НГО «Оптимист»</p>
-    </label>
-  </div>
-
-  <button type="submit" class="btn btn-primary mt-2">
-    <i class="fa-sharp fa-solid fa-paper-plane"></i>  Отправить
-  </button>
-</form>
-      </div>
-    </div>
-  </div>
-</main>
-
-
-
-<script>
-document.addEventListener("DOMContentLoaded", function() {
-
-  const form = document.getElementById("contactForm");
-
-  form.addEventListener("input", function(event) {
-
-    const field = event.target;
-
-    const label = form.querySelector(`label[for="${field.id}"]`);
-
-    if(field.value !== '') {
-      label.classList.add('label-up');
-    } else {
-      label.classList.remove('label-up');
-    }
-
-  });
-
-});
-</script>
-
+{{post.content|linebreaks}}
 {% endblock %}
