--- a/society_main/templates/society_main/index.html
+++ b/society_main/templates/society_main/index.html
@@ -51,13 +51,13 @@
 
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="{% static 'society_main/images/Оптимист_квадрат.jpg' %}" class="d-block w-100" alt="Логотип Оптимист для карусели">
+          <img src="{% static 'society_main/images/Оптимист_квадрат.jpg' %}" class="img-fluid rounded d-block w-100" alt="Логотип Оптимист для карусели">
         </div>
         <div class="carousel-item">
-          <img src="{% static 'society_main/images/image_(5).jpg' %}" class="d-block w-100" alt="Ещё один Логотип Оптимист для карусели">
+          <img src="{% static 'society_main/images/image_(5).jpg' %}" class="img-fluid rounded d-block w-100" alt="Ещё один Логотип Оптимист для карусели">
         </div>
         <div class="carousel-item">
-          <img src="{% static 'society_main/images/happy_peoples1.jpg' %}" class="d-block w-100" alt="Фото Оптимистов для карусели">
+          <img src="{% static 'society_main/images/happy_peoples1.jpg' %}" class="img-fluid rounded d-block w-100" alt="Фото Оптимистов для карусели">
         </div>
       </div>
 
