--- a/society_main/templates/society_main/list_categories.html
+++ b/society_main/templates/society_main/list_categories.html
@@ -1,5 +1,5 @@
             <ul class="list-unstyled px-2">
-                {% if cat_selected == 0 or cat_selected is None %}
+                {% if cat_selected == 0 %}
                     <li class="active text-decoration-none px-3 py-2 d-block">
                         <i class="fa-solid fa-list"></i> Все категории </li>
                 {% else %}
@@ -14,16 +14,7 @@
                 {% else %}
                     <li class=""><a href="{{ cat.get_absolute_url }}" class="text-decoration-none px-3 py-2 d-block">
                     <i class="{{ cat.icon }}"></i> {{cat.name}} </a></li>
-<!--                <li class=""><a href="" class="text-decoration-none px-3 py-2 d-block d-flex justify-content-between">-->
-<!--                        <span><i class="fa-solid fa-money-bill-wheat"></i> Льготы </span>-->
-<!--                        <span class="bg-dark rounded-pill text-white py-0 px-2">02</span>-->
-<!--                    </a>-->
 
-<!--                </li>-->
-<!--                <li class=""><a href="#" class="text-decoration-none px-3 py-2 d-block"><i-->
-<!--                            class="fal fa-envelope-open-text"></i> Services</a></li>-->
-<!--                <li class=""><a href="#" class="text-decoration-none px-3 py-2 d-block"><i class="fal fa-users"></i>-->
-<!--                        Customers</a></li>-->
                 {% endif %}
                 {% endfor %}
             </ul>
