--- a/society_main/templates/society_main/base.html
+++ b/society_main/templates/society_main/base.html
@@ -46,6 +46,7 @@
 <script src="{% static 'society_main/js/bootstrap.js' %}"></script>
 <script src="{% static 'society_main/js/sidebar.js' %}"></script>
 <script src="{% static 'society_main/js/fontawesome.js' %}"></script>
+<script src="{% static 'society_main/js/form.js' %}"></script>
 </body>
 </html>
 
