--- a/society_main/templates/society_main/components/footer.html
+++ b/society_main/templates/society_main/components/footer.html
@@ -12,13 +12,13 @@
             Соц.Сети:
             <span class="social-icons">
               <a href="https://t.me/django_selfedu" target="_blank">
-                <i class="fa-brands fa-telegram"></i></a>
+                <i class="fa-brands fa-telegram fa-lg"></i></a>
               <a href="https://vk.com/id662546453" target="_blank">
-                <i class="fa-brands fa-vk"></i></a>
+                <i class="fa-brands fa-vk fa-lg"></i></a>
               <a href="https://ok.ru/profile/598093818404" target="_blank">
-                <i class="fa-brands fa-square-odnoklassniki"></i></a>
+                <i class="fa-brands fa-square-odnoklassniki fa-lg"></i></a>
               <a href="https://api.whatsapp.com/send?phone=79288811509" target="_blank">
-                <i class="fa-brands fa-whatsapp"></i></a>
+                <i class="fa-brands fa-whatsapp fa-lg"></i></a>
             </span>
           </p>
 
