--- a/society_main/templates/society_main/base.html
+++ b/society_main/templates/society_main/base.html
@@ -1,35 +1,37 @@
 {% load static %}
 
 
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link type="text/css" href="{% static 'society_main/css/bootstrap.css' %}" rel="stylesheet"/>
-  <link type="text/css" href="{% static 'society_main/css/style.css' %}" rel="stylesheet"/>
-  <link type="text/css" href="{% static 'society_main/css/sidebar.css' %}" rel="stylesheet"/>
-<!--favicon images-->
-  <link rel="apple-touch-icon" sizes="57x57" href="{% static 'society_main/favicons/apple-icon-57x57.png' %}">
-  <link rel="apple-touch-icon" sizes="60x60" href="{% static 'society_main/favicons/apple-icon-60x60.png' %}">
-  <link rel="apple-touch-icon" sizes="72x72" href="{% static 'society_main/favicons/apple-icon-72x72.png' %}">
-  <link rel="apple-touch-icon" sizes="76x76" href="{% static 'society_main/favicons/apple-icon-76x76.png' %}">
-  <link rel="apple-touch-icon" sizes="114x114" href="{% static 'society_main/favicons/apple-icon-114x114.png' %}">
-  <link rel="apple-touch-icon" sizes="120x120" href="{% static 'society_main/favicons/apple-icon-120x120.png' %}">
-  <link rel="apple-touch-icon" sizes="144x144" href="{% static 'society_main/favicons/apple-icon-144x144.png' %}">
-  <link rel="apple-touch-icon" sizes="152x152" href="{% static 'society_main/favicons/apple-icon-152x152.png' %}">
-  <link rel="apple-touch-icon" sizes="180x180" href="{% static 'society_main/favicons/apple-icon-180x180.png' %}">
-  <link rel="icon" type="image/png" sizes="192x192"  href="{% static 'society_main/favicons/android-icon-192x192.png' %}">
-  <link rel="icon" type="image/png" sizes="32x32" href="{% static 'society_main/favicons/favicon-32x32.png' %}">
-  <link rel="icon" type="image/png" sizes="96x96" href="{% static 'society_main/favicons/favicon-96x96.png' %}">
-  <link rel="icon" type="image/png" sizes="16x16" href="{% static 'society_main/favicons/favicon-16x16.png' %}">
-  <link rel="manifest" href="/manifest.json">
-  <meta name="msapplication-TileColor" content="#ffffff">
-  <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
-  <meta name="theme-color" content="#ffffff">
-<!--end favicon images-->
-  <title>{{ title }}</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--  <link rel="manifest" href="{% static 'society_main/manifest.json' %}">-->
+    <link type="text/css" href="{% static 'society_main/css/bootstrap.css' %}" rel="stylesheet"/>
+    <link type="text/css" href="{% static 'society_main/css/style.css' %}" rel="stylesheet"/>
+    <link type="text/css" href="{% static 'society_main/css/sidebar.css' %}" rel="stylesheet"/>
+
+    <!--favicon images-->
+    <link rel="apple-touch-icon" sizes="57x57" href="{% static 'society_main/favicons/apple-icon-57x57.png' %}">
+    <link rel="apple-touch-icon" sizes="60x60" href="{% static 'society_main/favicons/apple-icon-60x60.png' %}">
+    <link rel="apple-touch-icon" sizes="72x72" href="{% static 'society_main/favicons/apple-icon-72x72.png' %}">
+    <link rel="apple-touch-icon" sizes="76x76" href="{% static 'society_main/favicons/apple-icon-76x76.png' %}">
+    <link rel="apple-touch-icon" sizes="114x114" href="{% static 'society_main/favicons/apple-icon-114x114.png' %}">
+    <link rel="apple-touch-icon" sizes="120x120" href="{% static 'society_main/favicons/apple-icon-120x120.png' %}">
+    <link rel="apple-touch-icon" sizes="144x144" href="{% static 'society_main/favicons/apple-icon-144x144.png' %}">
+    <link rel="apple-touch-icon" sizes="152x152" href="{% static 'society_main/favicons/apple-icon-152x152.png' %}">
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'society_main/favicons/apple-icon-180x180.png' %}">
+    <link rel="icon" type="image/png" sizes="192x192"
+          href="{% static 'society_main/favicons/android-icon-192x192.png' %}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'society_main/favicons/favicon-32x32.png' %}">
+    <link rel="icon" type="image/png" sizes="96x96" href="{% static 'society_main/favicons/favicon-96x96.png' %}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'society_main/favicons/favicon-16x16.png' %}">
+
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
+    <!--end favicon images-->
+    <title>{{ title }}</title>
 </head>
 
 <body>
@@ -38,15 +40,19 @@
 {% block content %}
 
 
+{% endblock %}
 
+{% block navigation %}
 
 {% endblock %}
+
 {% include "society_main/components/footer.html" %}
 
 <script src="{% static 'society_main/js/bootstrap.js' %}"></script>
 <script src="{% static 'society_main/js/sidebar.js' %}"></script>
 <script src="{% static 'society_main/js/fontawesome.js' %}"></script>
 <script src="{% static 'society_main/js/form.js' %}"></script>
+
 </body>
 </html>
 
