--- a/society_main/templates/society_main/components/play.html
+++ b/society_main/templates/society_main/components/play.html
@@ -1,16 +1,36 @@
-<link href="https://vjs.zencdn.net/7.20.3/video-js.css" rel="stylesheet" />
+<div class="accordion" id="videoAccordion">
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="descriptionHeading">
+      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseDescription" aria-expanded="true" aria-controls="collapseDescription">
+        Описание
+      </button>
+    </h2>
+    <div id="collapseDescription" class="accordion-collapse collapse show" aria-labelledby="descriptionHeading" data-bs-parent="#videoAccordion">
+      <div class="accordion-body">
+        <!-- Ваше описание здесь -->
+      </div>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="videoHeading">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseVideo" aria-expanded="false" aria-controls="collapseVideo">
+        Видео
+      </button>
+    </h2>
+    <div id="collapseVideo" class="accordion-collapse collapse" aria-labelledby="videoHeading" data-bs-parent="#videoAccordion">
+      <div class="accordion-body">
+         <div class="row mb-4">
+    <div class="col-md-6 offset-md-3 col-12">
+      <div class="embed-responsive embed-responsive-16by9 d-flex justify-content-center">
+        <video controls class="embed-responsive-item">
+          <source src="{{ post.video.url }}" class="mx-auto d-block">
+        </video>
+      </div>
+    </div>
+  </div>
+      </div>
+    </div>
+  </div>
+</div>
 
-<video
-  id="video"
-  class="video-js vjs-default-skin vjs-big-play-centered"
-  controls
-  data-setup='{}'
->
-</video>
 
-<script src="https://vjs.zencdn.net/7.20.3/video.min.js"></script>
-
-<script>
-var player = videojs('video');
-player.src({{ video.video.url }});
-</script>
