add README.md to the project

--- a/society_main/templates/society_main/contacts.html
+++ b/society_main/templates/society_main/contacts.html
@@ -44,6 +44,9 @@
     {{ form.message.label_tag }}
     {{ form.message }} <br>
   </div>
+    <div class="mb-3 form-group">
+    {{ form.captcha }}<br>
+  </div>
   <div class="mb-3 form-group d-flex align-items-start">
     <label for="{{ form.checkbox.id_for_label }}" class="custom-checkbox ps-3">
       {{ form.checkbox }}
