add description field in Post model for render posts in news.html

--- a/society_main/templates/society_main/news.html
+++ b/society_main/templates/society_main/news.html
@@ -25,7 +25,7 @@
                     {% endif %}
 
                     {% autoescape off %}
-                    {{ p.content|linebreaks|truncatewords:50 }}
+                    {{ p.description|linebreaks|truncatewords:50 }}
                     {% endautoescape %}
 
                     <div class="d-flex mt-5">
